# gtfs-rt-server

./: .gitignore  Readme.md  docker-compose.yml  main.sh  pyproject.toml
app/src/: api.py  test.py  update.py  update_gtfs.py
app/utils/: db.py  logger.py
docker/: docker-compose.yml  docker_compose.yml
docker/conf.d/: my.cnf
docker/initdb.d/: create-table.sql
